syntax = "proto3";

message CursorMsg {
  PositionMsg from = 1;
  PositionMsg to = 2;
  State state = 3;
}

enum State {
  HIDDEN = 0;
  FROM = 1;
  SELECTION_FROM = 2;
  SELECTION_TO = 3;
  }

message PositionMsg {
  repeated double base = 1;
  int32 last = 2;
  int32 index = 3;
}
